fix table alignment

--- a/src/pages/property-dashboard/PropertyDashboard.scss
+++ b/src/pages/property-dashboard/PropertyDashboard.scss
@@ -22,6 +22,9 @@
     padding: 1.3rem;
     text-align: left;
   }
+  tr {
+    text-align: left;
+  }
   td {
     border-bottom: solid 1px $color__gray--light;
     padding: 1.5rem 0;
